# BIT_hack

./: .gitignore  EXPO_GO_FIX.md  QUICK_FIX.md  RAPIDAPI_TROUBLESHOOTING.md  RESTART_EVERYTHING.md  get-ip.js  test-connection.js
backend/: .env_requirements  START_SERVER.md  index.js  package-lock.json  package.json  test-endpoint.js  test-rapidapi.js
backend/Controllers/: compareController.js  investmentController.js
backend/Controllers/Utilities/: callAI.js  sendJWT.js  verifyJWT.js
backend/Controllers/authControllers/: loginController.js  signupController.js
backend/Database/: connection.js  user.js
backend/Routes/: aiRoutes.js  authRoutes.js  compareRoutes.js
frontend/: App.js  package-lock.json  package.json
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/cpp/: CMakeLists.txt
frontend/android/app/src/main/java/com/pranavagrao/frontend/: MainActivity.kt  MainApplication.kt
frontend/src/Pages/: AIsuggest.jsx  Auth.jsx  Authstyles.js  Home.jsx  InvestmentPlanner.jsx  ProductSearch.jsx
frontend/src/config/: api.js
